force-app/main/default/objects/Order_Item__c/fields/Is_Future_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Future_Order__c</fullName>
    <description>Formula field: true when the order date is in the future. Used to surface the forward 12-month ship plan view in the pre-call brief.</description>
    <formula>Order_Date__c &gt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Future Order</label>
    <type>Checkbox</type>
</CustomField>