force-app/main/default/objects/Order_Item__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>Date the order was placed or the sample was dropped. Future dates indicate planned ship-plan deliveries.</description>
    <label>Order Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>