force-app/main/default/objects/Order_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Denormalized product name for fast display without a join.</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>