force-app/main/default/objects/Order_Item__c/fields/Ship_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Ship_Plan_Type__c</fullName>
    <description>Classifies the order line: recurring ship-plan delivery, one-time order, or sample drop.</description>
    <label>Ship Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Ship Plan</fullName>
            </value>
            <value>
                <fullName>Auto Ship Plan</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Sample Drop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>